# LozaBot

./: .gitignore  CMakeLists.txt  MockQEventLoopWrapper.hpp  ci_script.bat  main.cpp  tst_testcase.cpp
App/: CMakeLists.txt  main.cpp
App/Common/: CommonTypes.hpp
App/CommonFunctions/: CMakeLists.txt
App/CommonFunctions/api/: JsonParser.hpp
App/CommonFunctions/src/: JsonParser.cpp
App/QtWrappers/: CMakeLists.txt
App/QtWrappers/api/: QEventLoopWrapper.hpp  QNetworkAccessManagerWrapper.hpp
App/QtWrappers/src/: QEventLoopWrapper.cpp  QNetworkAccessManagerWrapper.cpp
App/RequestController/: CMakeLists.txt
App/RequestController/api/: RequestController.hpp  RequestControllerInterface.hpp
App/RequestController/src/: CookieCache.cpp  CookieCache.hpp  CookieStorage.hpp  RequestController.cpp
App/RequestDataCache/: CMakeLists.txt
App/RequestDataCache/api/: RequestDataCache.hpp
App/RequestDataCache/src/: CookieFactory.cpp  CookieFactory.hpp  CookieStorage.cpp  CookieStorage.hpp  RequestDataCache.cpp
App/RequestDriver/: CMakeLists.txt
App/RequestDriver/api/: RequestDriver.hpp  RequestDriverInterface.hpp
App/RequestDriver/src/: RequestCache.cpp  RequestCache.hpp  RequestDriver.cpp
UnitTests/: CMakeLists.txt
UnitTests/CommonFunctionsTest/: CMakeLists.txt  JsonParserTest.cpp
UnitTests/RequestControllerTest/: CMakeLists.txt  CookieFactoryTest.cpp  RequestControllerTest.cpp
UnitTests/RequestDataCacheTest/: CMakeLists.txt  CookieFactoryTest.cpp  CookieStorageTest.cpp  JsonParserTest.cpp  JsonUtils.hpp  RequestDataCacheTest.cpp
UnitTests/RequestDriverTest/: CMakeLists.txt  RequestCacheTest.cpp  RequestDriverTest.cpp
UnitTests/_mock/: MockQNetworkAccessManagerWrapper.hpp  MockRequestDriver.hpp
cmake/: CmakeFunction.cmake  QtCompileProperties.cmake  QtWinFilesDefined.cmake
